done python api for score prediction

--- a/code/test_train.ipynb
+++ b/code/test_train.ipynb
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,40 +1296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       CO2  VOC    RH   TEM  PM25\n",
-      "5      425    0  27.8  23.9   601\n",
-      "10     504    0  30.3  24.0   601\n",
-      "13     521    1  30.5  24.0   601\n",
-      "21     515    1  30.5  24.1   601\n",
-      "26     488    0  30.0  24.1   570\n",
-      "...    ...  ...   ...   ...   ...\n",
-      "69849  561    0  70.9  23.1   377\n",
-      "69854  564    0  71.0  23.1   377\n",
-      "69859  546    0  70.9  23.1   377\n",
-      "69860  544    0  70.8  23.2   364\n",
-      "69863  552    0  71.0  23.1   364\n",
-      "\n",
-      "[13975 rows x 5 columns]\n",
-      "5        2\n",
-      "10       2\n",
-      "13       3\n",
-      "21       3\n",
-      "26       2\n",
-      "        ..\n",
-      "69849    2\n",
-      "69854    2\n",
-      "69859    2\n",
-      "69860    2\n",
-      "69863    2\n",
-      "Name: SCORE, Length: 13975, dtype: int64\n",
-      "1.9957815408706665\n"
+      "{'co2_model': 0.09840072691440582, 'linear_model': 0.042923517525196075, 'dnn_co2_model': 0.09710312634706497, 'dnn_model': 0.0024174023419618607, 'reloaded': 1.9957815408706665}\n"
      ]
     }
    ],
