--- a/code/test_train.ipynb
+++ b/code/test_train.ipynb
@@ -78,7 +78,7 @@
     "sensors = ['98F4AB39DB50', '98F4AB38C884', '4C11AEE82D80']\n",
     "columns = ['CO2', 'VOC', 'RH', 'TEM', 'PM25', 'TIME', 'SCORE']\n",
     "\n",
-    "csv = f\"../{sensors[sensor -1]}-processed.csv\""
+    "csv = f\"../resources/{sensors[sensor -1]}-processed.csv\""
    ]
   },
   {
@@ -1401,10 +1401,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "f00c7be2d617c0c6011a6d971ac5c0f01d47a325f1826b8a1460ebb4c8af2bf9"
+   "hash": "58a7df4d938b178f98f3e675c79205fc779821ef5dbc0ef8286be2e29d1cb314"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 ('.venv': venv)",
+   "display_name": "Python 3.9.6 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
